--- a/catalog.html
+++ b/catalog.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Гостиницы</title>
     <link rel="stylesheet" href="styles/styles.css" />
+    <link rel="icon" href="images/favicon.svg" type="image/svg+xml" />
   </head>
   <body>
     <header class="main-header navigation-container">
@@ -234,46 +235,20 @@
                         >
                       </li>
                     </ul>
-                    <svg
-                      class="slider-container"
-                      width="288"
-                      height="20"
-                      viewBox="0 0 288 20"
-                      fill="none"
-                      xmlns="http://www.w3.org/2000/svg"
-                    >
-                      <rect
-                        x="207"
-                        width="20"
-                        height="20"
-                        rx="5"
-                        fill="white"
-                      />
-                      <line
-                        opacity="0.3"
-                        x1="0.5"
-                        y1="10"
-                        x2="287.5"
-                        y2="9.99998"
-                        stroke="white"
-                        stroke-width="4"
-                      />
-                      <line
-                        x1="1"
-                        y1="10"
-                        x2="227"
-                        y2="10"
-                        stroke="white"
-                        stroke-width="4"
-                      />
-                      <rect
-                        x="0.5"
-                        width="20"
-                        height="20"
-                        rx="5"
-                        fill="white"
-                      />
-                    </svg>
+                    <div class="range-scale">
+                      <div class="range-bar">
+                        <button class="range-toggle toggle-min">
+                          <span class="visually-hidden"
+                            >Изменить минимальную цену.</span
+                          >
+                        </button>
+                        <button class="range-toggle toggle-max">
+                          <span class="visually-hidden"
+                            >Изменить максимальную цену.</span
+                          >
+                        </button>
+                      </div>
+                    </div>
                   </div>
                 </fieldset>
               </div>
@@ -379,6 +354,7 @@
                           src="images/hotel-star.svg"
                           width="18"
                           height="17"
+                          alt=""
                         />
                       </li>
                       <li>
@@ -386,6 +362,7 @@
                           src="images/hotel-star.svg"
                           width="18"
                           height="17"
+                          alt=""
                         />
                       </li>
                       <li>
@@ -393,6 +370,7 @@
                           src="images/hotel-star.svg"
                           width="18"
                           height="17"
+                          alt=""
                         />
                       </li>
                       <li>
@@ -400,6 +378,7 @@
                           src="images/hotel-star.svg"
                           width="18"
                           height="17"
+                          alt=""
                         />
                       </li>
                     </ul>
@@ -435,6 +414,7 @@
                           src="images/hotel-star.svg"
                           width="18"
                           height="17"
+                          alt=""
                         />
                       </li>
                       <li>
@@ -442,6 +422,7 @@
                           src="images/hotel-star.svg"
                           width="18"
                           height="17"
+                          alt=""
                         />
                       </li>
                       <li>
@@ -449,6 +430,7 @@
                           src="images/hotel-star.svg"
                           width="18"
                           height="17"
+                          alt=""
                         />
                       </li>
                       <li>
@@ -456,6 +438,7 @@
                           src="images/hotel-star.svg"
                           width="18"
                           height="17"
+                          alt=""
                         />
                       </li>
                     </ul>
@@ -488,6 +471,7 @@
                           src="images/hotel-star.svg"
                           width="18"
                           height="17"
+                          alt=""
                         />
                       </li>
                       <li>
@@ -495,6 +479,7 @@
                           src="images/hotel-star.svg"
                           width="18"
                           height="17"
+                          alt=""
                         />
                       </li>
                       <li>
@@ -502,6 +487,7 @@
                           src="images/hotel-star.svg"
                           width="18"
                           height="17"
+                          alt=""
                         />
                       </li>
                     </ul>
@@ -534,6 +520,7 @@
                           src="images/hotel-star.svg"
                           width="18"
                           height="17"
+                          alt=""
                         />
                       </li>
                       <li>
@@ -541,6 +528,7 @@
                           src="images/hotel-star.svg"
                           width="18"
                           height="17"
+                          alt=""
                         />
                       </li>
                     </ul>
@@ -602,7 +590,7 @@
       <div class="main-footer-container">
         <ul class="footer-social-list">
           <li class="footer-social-item">
-            <a class="button" href="#">
+            <a class="button contact-btn" href="#">
               <span class="visually-hidden">ВКонтакте</span>
               <svg
                 class="footer-icon"
@@ -622,7 +610,7 @@
             </a>
           </li>
           <li class="footer-social-item">
-            <a class="button" href="#">
+            <a class="button contact-btn" href="#">
               <span class="visually-hidden">Телеграм</span>
               <svg
                 class="footer-icon"
@@ -640,7 +628,7 @@
             </a>
           </li>
           <li class="footer-social-item">
-            <a class="button" href="#">
+            <a class="button contact-btn" href="#">
               <span class="visually-hidden">Ютуб</span>
               <svg
                 class="footer-icon"
@@ -730,5 +718,189 @@
         </a>
       </div>
     </footer>
+
+    <div class="modal-container">
+      <div class="modal modal-reservation">
+        <button class="modal-close-button">
+          <span class="visually-hidden">Закрыть</span>
+          <svg
+            class="modal-close-icon"
+            width="14"
+            height="14"
+            viewBox="0 0 14 14"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M14 1.29231L12.7077 0L7 5.70769L1.29231 0L0 1.29231L5.70769 7L0 12.7077L1.29231 14L7 8.29231L12.7077 14L14 12.7077L8.29231 7L14 1.29231Z"
+              fill="black"
+            />
+          </svg>
+        </button>
+        <section class="modal-content">
+          <h2 class="modal-title">Поиск гостиницы в Седоне</h2>
+          <form
+            class="modal-form"
+            action="https://echo.htmlacademy.ru/"
+            method="post"
+          >
+            <div class="modal-date-wrapper">
+              <div class="field-group">
+                <label class="modal-label" for="arrival-date"
+                  >Дата заезда:</label
+                >
+
+                <input
+                  class="arrival-date field-modal"
+                  type="text"
+                  id="arrival-date"
+                  name="arrival-date"
+                  placeholder="Укажите дату"
+                  value="27 апреля 2020"
+                />
+              </div>
+              <p class="error-message">Мы не можем отправить вас в прошлое.</p>
+            </div>
+
+            <div class="modal-date-wrapper">
+              <div class="field-group">
+                <label class="modal-label" for="departure-date"
+                  >Дата выезда:</label
+                >
+                <input
+                  class="departure-date field-modal"
+                  type="text"
+                  id="departure-date"
+                  name="departure-date"
+                  placeholder="Укажите дату"
+                  value="1 сентября 2023"
+                />
+              </div>
+              <p class="info-message">
+                На эти даты есть свободные номера. Пока есть.
+              </p>
+            </div>
+            <div class="persons-number">
+              <div class="adults-number people-numb-wrapper">
+                <span class="people">Взрослые:</span>
+                <div class="modal-btn-wrapper">
+                  <button class="modal-btn-count modal-btn-minus">
+                    <svg
+                      class="btn-minus-icon"
+                      width="20"
+                      height="20"
+                      viewBox="0 0 20 20"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M3 9V11H17V9H3Z"
+                        fill="#756157"
+                        fill-opacity="0.3"
+                      />
+                    </svg>
+                  </button>
+                  <span>2</span>
+                  <button class="modal-btn-count modal-btn-plus">
+                    <svg
+                      class="btn-plus-icon"
+                      width="20"
+                      height="20"
+                      viewBox="0 0 20 20"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M17 9H11V3H9V9H3V11H9V17H11V11H17V9Z"
+                        fill="#756157"
+                        fill-opacity="0.3"
+                      />
+                    </svg>
+                  </button>
+                </div>
+              </div>
+
+              <div class="children-number people-numb-wrapper">
+                <div class="people-container">
+                  <span class="people children">Дети:</span>
+                  <svg
+                    class="icon-info"
+                    width="26"
+                    height="26"
+                    viewBox="0 0 26 26"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <circle cx="13" cy="13" r="13" fill="#83B3D3" />
+                    <path
+                      fill-rule="evenodd"
+                      clip-rule="evenodd"
+                      d="M12 7H14V9H12V7ZM14 19H12V10H14V19Z"
+                      fill="white"
+                    />
+                  </svg>
+                  <div class="modal-info-wrapper">
+                    <svg
+                      width="19"
+                      height="9"
+                      viewBox="0 0 19 9"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path d="M9.5 0L19 9H0L9.5 0Z" fill="#333333" />
+                    </svg>
+                    <p class="hover-info-subtitle">
+                      Укажите количество детей, которые будут с вами, возраст
+                      которых от 6 до 18 лет. Дети до 6 лет размещаются
+                      бесплатно.
+                    </p>
+                  </div>
+                </div>
+
+                <div class="modal-btn-wrapper">
+                  <button class="modal-btn-count modal-btn-minus">
+                    <svg
+                      class="btn-minus-icon"
+                      width="20"
+                      height="20"
+                      viewBox="0 0 20 20"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M3 9V11H17V9H3Z"
+                        fill="#756157"
+                        fill-opacity="0.3"
+                      />
+                    </svg>
+                  </button>
+                  <span>2</span>
+                  <button class="modal-btn-count modal-btn-plus">
+                    <svg
+                      class="btn-plus-icon"
+                      width="20"
+                      height="20"
+                      viewBox="0 0 20 20"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M17 9H11V3H9V9H3V11H9V17H11V11H17V9Z"
+                        fill="#756157"
+                        fill-opacity="0.3"
+                      />
+                    </svg>
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="submit-btn-wrapper">
+              <button class="modal-submit-btn">Найти</button>
+            </div>
+          </form>
+        </section>
+      </div>
+    </div>
+    <script src="/index.js"></script>
   </body>
 </html>
