--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Главная</title>
     <link rel="stylesheet" href="styles/styles.css" />
+    <link rel="icon" href="images/favicon.svg" type="image/svg+xml" />
   </head>
   <body>
     <header class="main-header navigation-container">
@@ -83,7 +84,7 @@
             width="458"
             height="352"
           />
-          <img class="white-vector" src="images/white-vector.svg" />
+          <img class="white-vector" src="images/white-vector.svg" alt="" />
         </div>
       </section>
       <section class="advantages">
@@ -98,12 +99,12 @@
           </div>
           <ul class="advantages-list">
             <li class="advantages-item sedona-city">
-              <h3 class="advantages-title">Настоящий городок</h3>
-              <p class="advantages-description">
-                Седона — не аттракцион для туристов, там течёт своя жизнь
-              </p>
-            </li>
-            <li class="advantages-item city-img">
+              <div class="advantages-item-group advantages-item-white">
+                <h3 class="advantages-title">Настоящий городок</h3>
+                <p class="advantages-description">
+                  Седона — не аттракцион для туристов, там течёт своя жизнь
+                </p>
+              </div>
               <img
                 class="advantages-img-city advantages-img"
                 src="images/photo-1.jpg"
@@ -130,7 +131,14 @@
                 Большинство едет в Гранд Каньон и толпится там
               </p>
             </li>
-            <li class="advantages-item bridge-img">
+
+            <li class="advantages-item devils-bridge">
+              <div class="advantages-item-group advantages-item-white">
+                <h3 class="advantages-title">Там есть мост дьявола</h3>
+                <p class="advantages-description">
+                  Да, по нему можно пройти! Если вы осмелитесь, разумеется
+                </p>
+              </div>
               <img
                 class="advantages-img-bridge advantages-img"
                 src="images/photo-2.jpg"
@@ -138,12 +146,6 @@
                 width="800"
                 height="385"
               />
-            </li>
-            <li class="advantages-item devils-bridge">
-              <h3 class="advantages-title">Там есть мост дьявола</h3>
-              <p class="advantages-description">
-                Да, по нему можно пройти! Если вы осмелитесь, разумеется
-              </p>
             </li>
           </ul>
         </div>
@@ -160,15 +162,14 @@
           </div>
           <ul class="services-list">
             <li class="services-item">
-              <div class="main-img-wrapper">
-                <img
-                  class="services-img"
-                  src="images/home.svg"
-                  alt="Иконка домика"
-                  width="75"
-                  height="72"
-                />
-              </div>
+              <img
+                class="services-img"
+                src="images/home.svg"
+                alt="Иконка домика"
+                width="75"
+                height="72"
+              />
+
               <h3 class="services-name">Жильё</h3>
               <p class="services-info">
                 Рекомендуем пожить в&nbsp;настоящем мотеле,
@@ -176,15 +177,14 @@
               </p>
             </li>
             <li class="services-item">
-              <div class="main-img-wrapper">
-                <img
-                  class="services-img"
-                  src="images/food.svg"
-                  alt="Иконка еды"
-                  width="75"
-                  height="72"
-                />
-              </div>
+              <img
+                class="services-img"
+                src="images/food.svg"
+                alt="Иконка еды"
+                width="75"
+                height="72"
+              />
+
               <h3 class="services-name">Еда</h3>
               <p class="services-info">
                 Всегда заказывайте топовый&nbsp;фирменный&nbsp;бургер,
@@ -196,8 +196,8 @@
                 class="services-img"
                 src="images/gift.svg"
                 alt="Иконка подарка"
-                width="64"
-                height="76"
+                width="75"
+                height="73"
               />
               <h3 class="services-name">Сувениры</h3>
               <p class="services-info">
@@ -374,5 +374,189 @@
         </a>
       </div>
     </footer>
+
+    <div class="modal-container">
+      <div class="modal modal-reservation">
+        <button class="modal-close-button">
+          <span class="visually-hidden">Закрыть</span>
+          <svg
+            class="modal-close-icon"
+            width="14"
+            height="14"
+            viewBox="0 0 14 14"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M14 1.29231L12.7077 0L7 5.70769L1.29231 0L0 1.29231L5.70769 7L0 12.7077L1.29231 14L7 8.29231L12.7077 14L14 12.7077L8.29231 7L14 1.29231Z"
+              fill="black"
+            />
+          </svg>
+        </button>
+        <section class="modal-content">
+          <h2 class="modal-title">Поиск гостиницы в Седоне</h2>
+          <form
+            class="modal-form"
+            action="https://echo.htmlacademy.ru/"
+            method="post"
+          >
+            <div class="modal-date-wrapper">
+              <div class="field-group">
+                <label class="modal-label" for="arrival-date"
+                  >Дата заезда:</label
+                >
+
+                <input
+                  class="arrival-date field-modal"
+                  type="text"
+                  id="arrival-date"
+                  name="arrival-date"
+                  placeholder="Укажите дату"
+                  value="27 апреля 2020"
+                />
+              </div>
+              <p class="error-message">Мы не можем отправить вас в прошлое.</p>
+            </div>
+
+            <div class="modal-date-wrapper">
+              <div class="field-group">
+                <label class="modal-label" for="departure-date"
+                  >Дата выезда:</label
+                >
+                <input
+                  class="departure-date field-modal"
+                  type="text"
+                  id="departure-date"
+                  name="departure-date"
+                  placeholder="Укажите дату"
+                  value="1 сентября 2023"
+                />
+              </div>
+              <p class="info-message">
+                На эти даты есть свободные номера. Пока есть.
+              </p>
+            </div>
+            <div class="persons-number">
+              <div class="adults-number people-numb-wrapper">
+                <span class="people">Взрослые:</span>
+                <div class="modal-btn-wrapper">
+                  <button class="modal-btn-count modal-btn-minus">
+                    <svg
+                      class="btn-minus-icon"
+                      width="20"
+                      height="20"
+                      viewBox="0 0 20 20"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M3 9V11H17V9H3Z"
+                        fill="#756157"
+                        fill-opacity="0.3"
+                      />
+                    </svg>
+                  </button>
+                  <span>2</span>
+                  <button class="modal-btn-count modal-btn-plus">
+                    <svg
+                      class="btn-plus-icon"
+                      width="20"
+                      height="20"
+                      viewBox="0 0 20 20"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M17 9H11V3H9V9H3V11H9V17H11V11H17V9Z"
+                        fill="#756157"
+                        fill-opacity="0.3"
+                      />
+                    </svg>
+                  </button>
+                </div>
+              </div>
+
+              <div class="children-number people-numb-wrapper">
+                <div class="people-container">
+                  <span class="people">Дети:</span>
+                  <svg
+                    class="icon-info"
+                    width="26"
+                    height="26"
+                    viewBox="0 0 26 26"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <circle cx="13" cy="13" r="13" fill="#83B3D3" />
+                    <path
+                      fill-rule="evenodd"
+                      clip-rule="evenodd"
+                      d="M12 7H14V9H12V7ZM14 19H12V10H14V19Z"
+                      fill="white"
+                    />
+                  </svg>
+                  <div class="modal-info-wrapper">
+                    <svg
+                      width="19"
+                      height="9"
+                      viewBox="0 0 19 9"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path d="M9.5 0L19 9H0L9.5 0Z" fill="#333333" />
+                    </svg>
+                    <p class="hover-info-subtitle">
+                      Укажите количество детей, которые будут с вами, возраст
+                      которых от 6 до 18 лет. Дети до 6 лет размещаются
+                      бесплатно.
+                    </p>
+                  </div>
+                </div>
+
+                <div class="modal-btn-wrapper">
+                  <button class="modal-btn-count modal-btn-minus">
+                    <svg
+                      class="btn-minus-icon"
+                      width="20"
+                      height="20"
+                      viewBox="0 0 20 20"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M3 9V11H17V9H3Z"
+                        fill="#756157"
+                        fill-opacity="0.3"
+                      />
+                    </svg>
+                  </button>
+                  <span>2</span>
+                  <button class="modal-btn-count modal-btn-plus">
+                    <svg
+                      class="btn-plus-icon"
+                      width="20"
+                      height="20"
+                      viewBox="0 0 20 20"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M17 9H11V3H9V9H3V11H9V17H11V11H17V9Z"
+                        fill="#756157"
+                        fill-opacity="0.3"
+                      />
+                    </svg>
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="submit-btn-wrapper">
+              <button class="modal-submit-btn">Найти</button>
+            </div>
+          </form>
+        </section>
+      </div>
+    </div>
+    <script src="/index.js"></script>
   </body>
 </html>
